Archive2/37/c167f91f17bc48/output
main.cpp: In function ‘int main()’:
main.cpp:20:19: error: ‘jsdem’ was not declared in this scope
     std::cout <<  jsdem tady words << std::endl;
                   ^
main.cpp:20:25: error: expected ‘;’ before ‘tady’
     std::cout <<  jsdem tady words << std::endl;
                         ^
